helloTriangle = executable('HelloTriangle', 'HelloTriangle.cpp', 
    dependencies: [dabDep, dabExampleDeps], 
    cpp_args : ['-fsanitize=address'],
    link_args : '-fsanitize=address')

renderBufferExample = executable('RenderBufferExample', 'RenderBufferExample.cpp', 
    dependencies: [dabDep, dabExampleDeps], 
    cpp_args : ['-fsanitize=address'],
    link_args : '-fsanitize=address')